--- a/imperative-clothing.html
+++ b/imperative-clothing.html
@@ -318,7 +318,7 @@
             ></a>
         <p>
             Now let's look at how a runtime can translate those nested object
-            literals into I/O.
+            literals into <span class="nowrap">I/O.</span>
         </p>
         <p>
             In <a href="https://nodejs.org">Node.js</a> I could do this by
