Update intro to /imperative-clothing

--- a/imperative-clothing.html
+++ b/imperative-clothing.html
@@ -14,13 +14,13 @@
         <p>
             I've always wanted the purely functional
             <a href="https://www.roc-lang.org/">Roc programming language</a> to
-            be delightful for I/O-heavy use cases, including shell scripting.
-            But when I recently sat down to port a shell script from
-            Bash to Roc, I wasn't happy with how the code ended up feeling.
+            be delightful for I/O-heavy use cases. But when I recently sat down to
+            port an I/O-heavy shell script from Bash to Roc, I wasn't happy with
+            how the code felt.
         </p>
         <p>
-            Fortunately, as it turned out, all it took to achieve a delightful
-            experience for purely functional I/O was a bit of syntax sugar!
+            Fortunately, all it took was a bit of syntax sugar to change that. Thanks to
+            one little operator, purely functional I/O in Roc has now become a real delight!
         </p>
         <h2>From Bash to Roc</h2>
         <p>
@@ -137,7 +137,7 @@
         <p>It might look like a minor difference
             when comparing one small line to another, but multplied across the
             whole program, the <code>!</code> version of the script felt much
-            less ceremonious.
+            nicer.
         </p>
         <p>
             So what does the <code>!</code> suffix actually do? It basically
