--- a/rendered/0.1-plus-0.2.html
+++ b/rendered/0.1-plus-0.2.html
@@ -371,7 +371,7 @@
                     >128-bit decimal type</a
                 >, although it isn&#39;t used by default when you write normal
                 decimal literals. (The same is true of F#, which is a functional
-                language based on C#.) This type is called
+                language that shares part of its standard library with C#.) This type is called
                 <a
                     href="https://learn.microsoft.com/en-us/dotnet/api/system.decimal?view=net-8.0"
                     ><code>System.Decimal</code></a
